# progressive-plasticity-crc-metastasis

./: .gitignore  README.md  pyproject.toml
notebooks/: ED_Figure_3.ipynb  Figure_1.ipynb  Figure_2.ipynb  Figure_3.ipynb  Figure_4.ipynb  download_data.ipynb  label_mapping.ipynb  requirements.py
src/utils/pl/: plot_custom.py  plot_embedding.py  plot_overlaps.py  plot_ternary.py  plot_trends.py
src/utils/pl/assets/: abbreviations.json  default.mplstyle  named_colors.json
src/utils/pp/: preprocess.py
src/utils/pp/assets/: ribosomal_genes.gmt
src/utils/tl/: clinical_associations.py  state_transitions.py  transfer_labels.py
